<resources>
    <string name="app_name">Guess Cadence</string>
    <string name="action_settings">Settings</string>
    <string-array name="unit_array">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string-array name="location_array">
        <item>Handle Bar Right</item>
        <item>Handle Bar Center</item>
        <item>Handle Bar Left</item>
        <item>Tube Top</item>
    </string-array>
    <string-array name="angle_array">
        <item>Radian</item>
        <item>Percent</item>
        <item>Permil</item>
        <item>Deglee</item>
    </string-array>
    <string-array name="orientation_array">
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string name="title_activity_setup_top">SetupTopActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_sensor_delay">Sensor Delay</string>
    <string-array name="pref_sensor_delay_names">
        <item>FASTEST</item>
        <item>GAME</item>
        <item>MORMAL</item>
        <item>UI</item>
    </string-array>
    <string-array name="pref_sensor_delay_values">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_location_power">Location Power Requirement</string>
    <string-array name="pref_location_power_names">
        <item>NO_REQUIREMENT</item>
        <item>HIGH</item>
        <item>LOW</item>
        <item>MEDIAM</item>
    </string-array>
    <string-array name="pref_location_power_values">
        <item>0</item>
        <item>3</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_location_accuracy">Location Accuracy</string>
    <string-array name="pref_location_accuracy_names">
        <item>COARSE</item>
        <item>FINE</item>
        <item>HIGH</item>
        <item>LOW</item>
    </string-array>
    <string-array name="pref_location_accuracy_values">
        <item>2</item>
        <item>1</item>
        <item>3</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_default_bike">Default Bike</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_bike_list">BikeListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
