<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:digits="-0123456789"
        android:defaultValue="-1"
        android:inputType="numberSigned"
        android:key="pref_key_default_bike"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_default_bike" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_sensor_delay_names"
        android:entryValues="@array/pref_sensor_delay_values"
        android:key="pref_key_sensor_delay"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sensor_delay" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_location_power_names"
        android:entryValues="@array/pref_location_power_values"
        android:key="pref_key_location_power"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_location_power" />

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_location_accuracy_names"
        android:entryValues="@array/pref_location_accuracy_values"
        android:key="pref_key_location_accuracy"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_location_accuracy" />
</PreferenceScreen>
